# login_mail

./: app.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0f0a78a9d0e4_added_new_column.py  a6f1f7b260cd_create_users_table.py
auth/: auth.py  mail.py  mail_ui.py
database/: db.py  model.py
templates/: login.html  password_reset.html  reset.html  reset_success.html  signup.html  signup_success.html
