[project]
name = "login-mail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "sqlalchemy[all]>=2.0.40",
    "uvicorn>=0.34.2",
]
